experiments and runs

--- a/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/1_1_experiments_create_experiments.ipynb
+++ b/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/1_1_experiments_create_experiments.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating Experiments"
+    "# Creating Experiments\n",
+    "Name of the experiment should not match with previous experiments "
    ]
   },
   {
@@ -21,15 +22,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import mlflow\n",
-    "from mlflow_for_ml_dev.src.utils.folder_operations import get_project_root\n",
+    "import sys\n",
+    "from pathlib import Path\n",
     "\n",
-    "# set mlflow tracking uri\n",
-    "mlflow.set_tracking_uri(uri=(get_project_root() / 'mlruns').as_uri())"
+    "def find_project_root(marker=\"pyproject.toml\"):\n",
+    "    p = Path().resolve()\n",
+    "    for parent in [p, *p.parents]:\n",
+    "        if (parent / marker).exists():\n",
+    "            return parent\n",
+    "    raise RuntimeError(\"Could not find project root\")\n",
+    "\n",
+    "PROJECT_ROOT = find_project_root()\n",
+    "sys.path.append(str(PROJECT_ROOT))"
    ]
   },
   {
@@ -37,6 +45,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import mlflow\n",
+    "from mlflow_for_ml_dev.src.utils.folder_operations import get_project_root\n",
+    "\n",
+    "# set mlflow tracking uri -> we are saving metadata in the local root folder\n",
+    "mlflow.set_tracking_uri(uri=(get_project_root() / 'mlruns').as_uri())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment created with ID: 262686110326234862\n"
+     ]
+    }
+   ],
    "source": [
     "experiment_id = mlflow.create_experiment(\"creating-experiments\", tags={\n",
     "    \"topic\":\"experiment-management\",\n",
@@ -52,7 +81,9 @@
    "source": [
     "**Notes**:\n",
     "\n",
-    "If the experiment name already exists, the method will throw an exception. Finally, creating the experiment using the method `create_experiment` does not mean that it will be automatically detected by other mlflow functions within the current Python context. Unless you specify the experiment ID, the runs will be stored under the `Default` Experiment (if there is no other active experiment). Therefore, we need to specify the newly created experiment as the active experiment using `mlflow.set_experiment`."
+    "Previous step created mlruns folder. Inside this folder we have our experiment folder (262686110326234862), and folder with name 0 -> `Default`.\n",
+    "\n",
+    "If the experiment name already exists, the method will throw an exception. Finally, creating the experiment using the method `create_experiment` does not mean that it will be automatically detected by other mlflow functions within the current Python context. Unless you specify the experiment ID, the runs will be stored under the `Default` Experiment (if there is no other active experiment). Therefore, we need to specify the newly created experiment as the active experiment using `mlflow.set_experiment`. You must use either name OR id of the experiment."
    ]
   },
   {
@@ -71,29 +102,46 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Active run_id: d0828175a8cf4a158ab73b7c0e8cab9f\n"
+     ]
+    }
+   ],
    "source": [
     "# Here we start a new run without specifying the experiment_id or having called mlflow.set_experiment()\n",
-    "# This will create a new run in the default experiment\n",
+    "# This will create a new run in the default experiment -> check 0 folder in mlruns\n",
     "with mlflow.start_run() as run:\n",
     "    print(f\"Active run_id: {run.info.run_id}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We set the experiment to the one we created earlier.\n",
+    "# We set the experiment to the one we created earlier. \n",
+    "# Now, all subsequent runs will be logged to this experiment and not the default one.\n",
     "experiment = mlflow.set_experiment(experiment_name=\"creating-experiments\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Active run_id: 46354d6ec73f40a5baf565bf80d16073\n"
+     ]
+    }
+   ],
    "source": [
     "# Now we start a new run, this will create a new run in the experiment we set\n",
     "with mlflow.start_run() as run:\n",
@@ -106,14 +154,24 @@
    "source": [
     "**Notes:**\n",
     "\n",
-    "We can use `mlflow.set_experiment` to create a new experiment, if the name we are providing in the parameter `experiment_name` has not been taken by other experiments, mlflow will create a new experiment using this name, the caviat here is that we cannot provide tags or specify the artifact location for the experiments created in this way."
+    "We can use `mlflow.set_experiment` to create a new experiment, if the name we are providing in the parameter `experiment_name` has not been taken by other experiments, mlflow will create a new experiment using this name, the caviat here is that we cannot provide tags or specify the artifact location for the experiments created in this way.\n",
+    "\n",
+    "In other words, we can use `set_experiment` directly without running `create_experiment` in the first place, but it's not convenient."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/12/02 16:33:20 INFO mlflow.tracking.fluent: Experiment with name 'creating-experiments-new' does not exist. Creating a new experiment.\n"
+     ]
+    }
+   ],
    "source": [
     "# set the experiment\n",
     "experiment = mlflow.set_experiment(experiment_name=\"creating-experiments-new\")"
@@ -121,9 +179,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'131424986827395711'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "experiment.experiment_id"
    ]
@@ -132,9 +201,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "MlflowException",
+     "evalue": "Could not find experiment with ID 1314249868273957115",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mMlflowException\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# set the experiment\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m experiment \u001b[38;5;241m=\u001b[39m \u001b[43mmlflow\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mset_experiment\u001b[49m\u001b[43m(\u001b[49m\u001b[43mexperiment_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mexperiment\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexperiment_id\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m5\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\dragu\\Documents\\GIT\\mlflow_for_ml_dev_tutorial\\.venv\\Lib\\site-packages\\mlflow\\tracking\\fluent.py:174\u001b[0m, in \u001b[0;36mset_experiment\u001b[1;34m(experiment_name, experiment_id)\u001b[0m\n\u001b[0;32m    172\u001b[0m         experiment \u001b[38;5;241m=\u001b[39m client\u001b[38;5;241m.\u001b[39mget_experiment(experiment_id)\n\u001b[0;32m    173\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 174\u001b[0m     experiment \u001b[38;5;241m=\u001b[39m \u001b[43mclient\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_experiment\u001b[49m\u001b[43m(\u001b[49m\u001b[43mexperiment_id\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    175\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m experiment \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    176\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m MlflowException(\n\u001b[0;32m    177\u001b[0m             message\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExperiment with ID \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mexperiment_id\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m does not exist.\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    178\u001b[0m             error_code\u001b[38;5;241m=\u001b[39mRESOURCE_DOES_NOT_EXIST,\n\u001b[0;32m    179\u001b[0m         )\n",
+      "File \u001b[1;32mc:\\Users\\dragu\\Documents\\GIT\\mlflow_for_ml_dev_tutorial\\.venv\\Lib\\site-packages\\mlflow\\tracking\\client.py:1259\u001b[0m, in \u001b[0;36mMlflowClient.get_experiment\u001b[1;34m(self, experiment_id)\u001b[0m\n\u001b[0;32m   1227\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mget_experiment\u001b[39m(\u001b[38;5;28mself\u001b[39m, experiment_id: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Experiment:\n\u001b[0;32m   1228\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Retrieve an experiment by experiment_id from the backend store\u001b[39;00m\n\u001b[0;32m   1229\u001b[0m \n\u001b[0;32m   1230\u001b[0m \u001b[38;5;124;03m    Args:\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1257\u001b[0m \u001b[38;5;124;03m      Lifecycle_stage: active\u001b[39;00m\n\u001b[0;32m   1258\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m-> 1259\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_tracking_client\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_experiment\u001b[49m\u001b[43m(\u001b[49m\u001b[43mexperiment_id\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\dragu\\Documents\\GIT\\mlflow_for_ml_dev_tutorial\\.venv\\Lib\\site-packages\\mlflow\\tracking\\_tracking_service\\client.py:492\u001b[0m, in \u001b[0;36mTrackingServiceClient.get_experiment\u001b[1;34m(self, experiment_id)\u001b[0m\n\u001b[0;32m    484\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mget_experiment\u001b[39m(\u001b[38;5;28mself\u001b[39m, experiment_id):\n\u001b[0;32m    485\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    486\u001b[0m \u001b[38;5;124;03m    Args:\u001b[39;00m\n\u001b[0;32m    487\u001b[0m \u001b[38;5;124;03m        experiment_id: The experiment ID returned from ``create_experiment``.\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    490\u001b[0m \u001b[38;5;124;03m        :py:class:`mlflow.entities.Experiment`\u001b[39;00m\n\u001b[0;32m    491\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 492\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstore\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_experiment\u001b[49m\u001b[43m(\u001b[49m\u001b[43mexperiment_id\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\dragu\\Documents\\GIT\\mlflow_for_ml_dev_tutorial\\.venv\\Lib\\site-packages\\mlflow\\store\\tracking\\file_store.py:448\u001b[0m, in \u001b[0;36mFileStore.get_experiment\u001b[1;34m(self, experiment_id)\u001b[0m\n\u001b[0;32m    437\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    438\u001b[0m \u001b[38;5;124;03mFetch the experiment.\u001b[39;00m\n\u001b[0;32m    439\u001b[0m \u001b[38;5;124;03mNote: This API will search for active as well as deleted experiments.\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    445\u001b[0m \u001b[38;5;124;03m    A single Experiment object if it exists, otherwise raises an Exception.\u001b[39;00m\n\u001b[0;32m    446\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    447\u001b[0m experiment_id \u001b[38;5;241m=\u001b[39m FileStore\u001b[38;5;241m.\u001b[39mDEFAULT_EXPERIMENT_ID \u001b[38;5;28;01mif\u001b[39;00m experiment_id \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m experiment_id\n\u001b[1;32m--> 448\u001b[0m experiment \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_experiment\u001b[49m\u001b[43m(\u001b[49m\u001b[43mexperiment_id\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    449\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m experiment \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    450\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m MlflowException(\n\u001b[0;32m    451\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExperiment \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mexperiment_id\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m does not exist.\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    452\u001b[0m         databricks_pb2\u001b[38;5;241m.\u001b[39mRESOURCE_DOES_NOT_EXIST,\n\u001b[0;32m    453\u001b[0m     )\n",
+      "File \u001b[1;32mc:\\Users\\dragu\\Documents\\GIT\\mlflow_for_ml_dev_tutorial\\.venv\\Lib\\site-packages\\mlflow\\store\\tracking\\file_store.py:418\u001b[0m, in \u001b[0;36mFileStore._get_experiment\u001b[1;34m(self, experiment_id, view_type)\u001b[0m\n\u001b[0;32m    416\u001b[0m experiment_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_experiment_path(experiment_id, view_type)\n\u001b[0;32m    417\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m experiment_dir \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m--> 418\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m MlflowException(\n\u001b[0;32m    419\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCould not find experiment with ID \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mexperiment_id\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    420\u001b[0m         databricks_pb2\u001b[38;5;241m.\u001b[39mRESOURCE_DOES_NOT_EXIST,\n\u001b[0;32m    421\u001b[0m     )\n\u001b[0;32m    422\u001b[0m meta \u001b[38;5;241m=\u001b[39m FileStore\u001b[38;5;241m.\u001b[39m_read_yaml(experiment_dir, FileStore\u001b[38;5;241m.\u001b[39mMETA_DATA_FILE_NAME)\n\u001b[0;32m    423\u001b[0m meta[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtags\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_all_experiment_tags(experiment_id)\n",
+      "\u001b[1;31mMlflowException\u001b[0m: Could not find experiment with ID 1314249868273957115"
+     ]
+    }
+   ],
    "source": [
-    "# set the experiment\n",
+    "# set the experiment -> you can't create experiment based on random id. Only based on name. ID is used only to reference existing experiments\n",
     "experiment = mlflow.set_experiment(experiment_id=experiment.experiment_id+\"5\")"
    ]
   },
@@ -162,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
