--- a/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/2_2_runs_retrieve_run.ipynb
+++ b/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/2_2_runs_retrieve_run.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Retrieving Runs.\n"
+    "# Retrieving Runs\n"
    ]
   },
   {
@@ -20,8 +20,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "---\n",
+    "\n",
+    "### 🔍 Retrieving MLflow Runs — Quick Notes\n",
+    "\n",
+    "* **`mlflow.get_run(run_id)`** → retrieve any run by ID (for inspection, loading metrics, params, artifacts, models).\n",
+    "* **`mlflow.active_run()`** → returns the **currently active** run, otherwise `None`.\n",
+    "* **`mlflow.last_active_run()`** → convenience helper to access the **most recently finished/active** run in the same Python session.\n",
+    "\n",
+    "➡️ Completed runs **cannot be re-activated** — MLflow treats them as immutable.\n",
+    "➡️ To continue work or a new experiment iteration, **start a new run** (optionally reference previous run via tags).\n",
+    "\n",
+    "Standard workflow: **One run per training attempt / experiment variation**.\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def find_project_root(marker=\"pyproject.toml\"):\n",
+    "    p = Path().resolve()\n",
+    "    for parent in [p, *p.parents]:\n",
+    "        if (parent / marker).exists():\n",
+    "            return parent\n",
+    "    raise RuntimeError(\"Could not find project root\")\n",
+    "\n",
+    "PROJECT_ROOT = find_project_root()\n",
+    "sys.path.append(str(PROJECT_ROOT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,30 +75,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "run_uuid: \"d8fa3ff807a248d38a1a72956710a0cc\"\n",
+      "run_uuid: \"4172520e2ed74a3c8c72233e6a4ad18d\"\n",
       "experiment_id: \"0\"\n",
-      "run_name: \"masked-stork-52\"\n",
-      "user_id: \"manue\"\n",
+      "run_name: \"suave-sow-545\"\n",
+      "user_id: \"dragu\"\n",
       "status: FINISHED\n",
-      "start_time: 1740706836321\n",
-      "end_time: 1740706836341\n",
-      "artifact_uri: \"file:///C:/Users/manue/projects/mlflow_for_ml_dev/mlruns/0/d8fa3ff807a248d38a1a72956710a0cc/artifacts\"\n",
+      "start_time: 1764751797393\n",
+      "end_time: 1764752024443\n",
+      "artifact_uri: \"file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/0/4172520e2ed74a3c8c72233e6a4ad18d/artifacts\"\n",
       "lifecycle_stage: \"active\"\n",
-      "run_id: \"d8fa3ff807a248d38a1a72956710a0cc\"\n",
+      "run_id: \"4172520e2ed74a3c8c72233e6a4ad18d\"\n",
       "\n",
-      "{'metrics': {}, 'params': {}, 'tags': {'mlflow.runName': 'masked-stork-52', 'mlflow.source.name': 'c:\\\\Users\\\\manue\\\\projects\\\\mlflow_for_ml_dev\\\\.venv\\\\Lib\\\\site-packages\\\\ipykernel_launcher.py', 'mlflow.source.type': 'LOCAL', 'mlflow.user': 'manue'}}\n"
+      "{'metrics': {'random-metric': 10.0}, 'params': {}, 'tags': {'mlflow.runName': 'suave-sow-545', 'mlflow.source.name': 'c:\\\\Users\\\\dragu\\\\Documents\\\\GIT\\\\mlflow_for_ml_dev_tutorial\\\\.venv\\\\Lib\\\\site-packages\\\\ipykernel_launcher.py', 'mlflow.source.type': 'LOCAL', 'mlflow.user': 'dragu'}}\n"
      ]
     }
    ],
    "source": [
-    "run_id = \"d8fa3ff807a248d38a1a72956710a0cc\"\n",
+    "run_id = \"4172520e2ed74a3c8c72233e6a4ad18d\"\n",
     "run = mlflow.get_run(run_id)\n",
     "print(run.info.to_proto())\n",
     "print(run.data.to_dictionary())"
@@ -113,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +166,8 @@
     }
    ],
    "source": [
-    "# This method will return the currently active run (if one exists), or None if no run is active\n",
+    "# This method will return the currently active run (if one exists in the Python context), or None if no run is active\n",
+    "# we haven't started any run in this notebook yet\n",
     "run  = mlflow.active_run()\n",
     "\n",
     "print(run)"
@@ -133,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +184,7 @@
      "text": [
       "active\n",
       "RUNNING\n",
-      "nimble-shrike-369\n",
+      "enthused-conch-274\n",
       "None\n"
      ]
     }
@@ -150,18 +192,18 @@
    "source": [
     "# Starting new active run\n",
     "mlflow.start_run()\n",
-    "# Get the active run\n",
+    "# Get the active run - now we have an active run\n",
     "run = mlflow.active_run()\n",
     "# Print the lifecycle stage of the active run\n",
-    "print(run.info.lifecycle_stage)\n",
-    "print(run.info.status)\n",
+    "print(run.info.lifecycle_stage) # active\n",
+    "print(run.info.status) # Running\n",
     "print(run.info.run_name)\n",
     "# End the active run\n",
     "mlflow.end_run()\n",
     "# Get the active run\n",
     "run = mlflow.active_run()\n",
-    "\n",
-    "print(run)"
+    "# Once we finished the run, active run returns None\n",
+    "print(run) # None"
    ]
   },
   {
@@ -178,24 +220,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Run: data=<RunData: metrics={}, params={}, tags={'mlflow.runName': 'nimble-shrike-369',\n",
-      " 'mlflow.source.name': 'c:\\\\Users\\\\manue\\\\projects\\\\mlflow_for_ml_dev\\\\.venv\\\\Lib\\\\site-packages\\\\ipykernel_launcher.py',\n",
+      "<Run: data=<RunData: metrics={}, params={}, tags={'mlflow.runName': 'enthused-conch-274',\n",
+      " 'mlflow.source.name': 'c:\\\\Users\\\\dragu\\\\Documents\\\\GIT\\\\mlflow_for_ml_dev_tutorial\\\\.venv\\\\Lib\\\\site-packages\\\\ipykernel_launcher.py',\n",
       " 'mlflow.source.type': 'LOCAL',\n",
-      " 'mlflow.user': 'manue'}>, info=<RunInfo: artifact_uri='file:///C:/Users/manue/projects/mlflow_for_ml_dev/mlruns/0/078d7b72ecb845099df4a05267337c4a/artifacts', end_time=1740707261930, experiment_id='0', lifecycle_stage='active', run_id='078d7b72ecb845099df4a05267337c4a', run_name='nimble-shrike-369', run_uuid='078d7b72ecb845099df4a05267337c4a', start_time=1740707261908, status='FINISHED', user_id='manue'>, inputs=<RunInputs: dataset_inputs=[]>>\n",
-      "nimble-shrike-369\n"
+      " 'mlflow.user': 'dragu'}>, info=<RunInfo: artifact_uri='file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/0/092357415d98435081a8c73232be2468/artifacts', end_time=1764755542025, experiment_id='0', lifecycle_stage='active', run_id='092357415d98435081a8c73232be2468', run_name='enthused-conch-274', run_uuid='092357415d98435081a8c73232be2468', start_time=1764755542008, status='FINISHED', user_id='dragu'>, inputs=<RunInputs: dataset_inputs=[]>>\n",
+      "enthused-conch-274\n"
      ]
     }
    ],
    "source": [
+    "# last active run either retrieves actually running active run OR it takes the last run started in the current python process\n",
     "run = mlflow.last_active_run()\n",
-    "\n",
+    "# the name in this cell matches the name of the last run created in the previous cell\n",
     "print(run)\n",
     "print(run.info.run_name)"
    ]
@@ -208,16 +251,16 @@
     {
      "data": {
       "text/plain": [
-       "run_uuid: \"078d7b72ecb845099df4a05267337c4a\"\n",
+       "run_uuid: \"092357415d98435081a8c73232be2468\"\n",
        "experiment_id: \"0\"\n",
-       "run_name: \"nimble-shrike-369\"\n",
-       "user_id: \"manue\"\n",
+       "run_name: \"enthused-conch-274\"\n",
+       "user_id: \"dragu\"\n",
        "status: FINISHED\n",
-       "start_time: 1740707261908\n",
-       "end_time: 1740707261930\n",
-       "artifact_uri: \"file:///C:/Users/manue/projects/mlflow_for_ml_dev/mlruns/0/078d7b72ecb845099df4a05267337c4a/artifacts\"\n",
+       "start_time: 1764755542008\n",
+       "end_time: 1764755542025\n",
+       "artifact_uri: \"file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/0/092357415d98435081a8c73232be2468/artifacts\"\n",
        "lifecycle_stage: \"active\"\n",
-       "run_id: \"078d7b72ecb845099df4a05267337c4a\""
+       "run_id: \"092357415d98435081a8c73232be2468\""
       ]
      },
      "execution_count": 7,
@@ -231,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -249,9 +292,11 @@
     "    print(\"WITHIN RUN CONTEXT\\n\")\n",
     "\n",
     "print(\"OUTSIDE RUN CONTEXT\")\n",
-    "run1 = mlflow.active_run()\n",
+    "# there are no active runs, as the context manager started AND ended the run\n",
+    "# but we can retrieve it using last_active_run\n",
+    "run1 = mlflow.active_run() # None\n",
     "\n",
-    "run2 = mlflow.last_active_run()"
+    "run2 = mlflow.last_active_run() # started-run"
    ]
   },
   {
@@ -283,16 +328,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "run_uuid: \"a47f9fc25bff4f378ce521e12898d42b\"\n",
+      "run_uuid: \"0891544819c041f2b0f8f68145f5286d\"\n",
       "experiment_id: \"0\"\n",
       "run_name: \"started-run\"\n",
-      "user_id: \"manue\"\n",
+      "user_id: \"dragu\"\n",
       "status: FINISHED\n",
-      "start_time: 1740707412136\n",
-      "end_time: 1740707412160\n",
-      "artifact_uri: \"file:///C:/Users/manue/projects/mlflow_for_ml_dev/mlruns/0/a47f9fc25bff4f378ce521e12898d42b/artifacts\"\n",
+      "start_time: 1764755828197\n",
+      "end_time: 1764755828215\n",
+      "artifact_uri: \"file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/0/0891544819c041f2b0f8f68145f5286d/artifacts\"\n",
       "lifecycle_stage: \"active\"\n",
-      "run_id: \"a47f9fc25bff4f378ce521e12898d42b\"\n",
+      "run_id: \"0891544819c041f2b0f8f68145f5286d\"\n",
       "\n",
       "Run Status:  FINISHED\n"
      ]
@@ -300,6 +345,7 @@
    ],
    "source": [
     "# This will print data since there was an active run in the current python process.\n",
+    "# the last active run was \"started-run\" \n",
     "print(run2.info.to_proto())\n",
     "print(\"Run Status: \",run2.info.status)"
    ]
@@ -321,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
