--- a/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/2_3_runs_update_run.ipynb
+++ b/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/2_3_runs_update_run.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Update run tags"
+    "# Update run tags\n",
+    "You need an active run, otherwise this command will create a random run under which it writes a tag"
    ]
   },
   {
@@ -25,6 +26,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def find_project_root(marker=\"pyproject.toml\"):\n",
+    "    p = Path().resolve()\n",
+    "    for parent in [p, *p.parents]:\n",
+    "        if (parent / marker).exists():\n",
+    "            return parent\n",
+    "    raise RuntimeError(\"Could not find project root\")\n",
+    "\n",
+    "PROJECT_ROOT = find_project_root()\n",
+    "sys.path.append(str(PROJECT_ROOT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import mlflow\n",
     "from mlflow_for_ml_dev.src.utils.folder_operations import get_project_root\n",
     "\n",
@@ -36,9 +57,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mlflow.runName': 'lyrical-shad-646',\n",
+       " 'mlflow.source.name': 'c:\\\\Users\\\\dragu\\\\Documents\\\\GIT\\\\mlflow_for_ml_dev_tutorial\\\\.venv\\\\Lib\\\\site-packages\\\\ipykernel_launcher.py',\n",
+       " 'mlflow.source.type': 'LOCAL',\n",
+       " 'mlflow.user': 'dragu',\n",
+       " 'my-tag': 'tag-value'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "with mlflow.start_run() as run:\n",
+    "    # we set tag within the run context - actively running run\n",
     "    mlflow.set_tag(\"my-tag\", \"tag-value\")\n",
     "\n",
     "run = mlflow.last_active_run()\n",
@@ -47,11 +84,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mlflow.runName': 'lyrical-shad-646',\n",
+       " 'mlflow.source.name': 'c:\\\\Users\\\\dragu\\\\Documents\\\\GIT\\\\mlflow_for_ml_dev_tutorial\\\\.venv\\\\Lib\\\\site-packages\\\\ipykernel_launcher.py',\n",
+       " 'mlflow.source.type': 'LOCAL',\n",
+       " 'mlflow.user': 'dragu',\n",
+       " 'my-tag': 'tag-value UPDATED'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Resume the previous run and update the tag\n",
+    "# Resume the previous run by providing the run id and update the tag\n",
+    "# Without run_id, mlflow starts a new run\n",
     "with mlflow.start_run(run_id=run.info.run_id) as run:\n",
     "    mlflow.set_tag(\"my-tag\", \"tag-value UPDATED\")\n",
     "\n",
@@ -72,10 +125,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Similar to set_tag, but here we can provide multiple tags at once"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mlflow.runName': 'lyrical-shad-646',\n",
+       " 'mlflow.source.name': 'c:\\\\Users\\\\dragu\\\\Documents\\\\GIT\\\\mlflow_for_ml_dev_tutorial\\\\.venv\\\\Lib\\\\site-packages\\\\ipykernel_launcher.py',\n",
+       " 'mlflow.source.type': 'LOCAL',\n",
+       " 'mlflow.user': 'dragu',\n",
+       " 'my-tag': 'tag-value UPDATED AGAIN',\n",
+       " 'my-tag2': 'tag-value2'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Resume the previous run and update the tag\n",
     "with mlflow.start_run(run.info.run_id) as run:\n",
@@ -92,7 +168,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Set Tags using the client"
+    "# Set Tags using the client\n",
+    "The difference with previous commands is that you don't need an active run to set tags. Instead, you refer to run using ID."
    ]
   },
   {
@@ -109,9 +186,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'client-tag': 'client-tag-value',\n",
+       " 'mlflow.runName': 'lyrical-shad-646',\n",
+       " 'mlflow.source.name': 'c:\\\\Users\\\\dragu\\\\Documents\\\\GIT\\\\mlflow_for_ml_dev_tutorial\\\\.venv\\\\Lib\\\\site-packages\\\\ipykernel_launcher.py',\n",
+       " 'mlflow.source.type': 'LOCAL',\n",
+       " 'mlflow.user': 'dragu',\n",
+       " 'my-tag': 'tag-value UPDATED USING CLIENT',\n",
+       " 'my-tag2': 'tag-value2'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# get the mlflow client\n",
     "client = mlflow.MlflowClient()\n",
@@ -128,14 +222,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Providing description by updating tags."
+    "## Providing description by updating tags\n",
+    "Description can be added using `mlflow.note.content` tag"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'client-tag': 'client-tag-value',\n",
+       " 'mlflow.note.content': 'This is a description provided using the client.',\n",
+       " 'mlflow.runName': 'lyrical-shad-646',\n",
+       " 'mlflow.source.name': 'c:\\\\Users\\\\dragu\\\\Documents\\\\GIT\\\\mlflow_for_ml_dev_tutorial\\\\.venv\\\\Lib\\\\site-packages\\\\ipykernel_launcher.py',\n",
+       " 'mlflow.source.type': 'LOCAL',\n",
+       " 'mlflow.user': 'dragu',\n",
+       " 'my-tag': 'tag-value UPDATED USING CLIENT',\n",
+       " 'my-tag2': 'tag-value2'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "client = mlflow.MlflowClient()\n",
     "\n",
@@ -149,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
