--- a/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/2_5_runs_delete_run.ipynb
+++ b/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/2_5_runs_delete_run.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Delete a run."
+    "# Delete a run\n",
+    "\n",
+    "Same as with the experiment, by deleting a run, you just change run status to deleted, and it's hidden from UI.\n",
+    "\n",
+    "However, physically it's still held in the folder. And you can restore it."
    ]
   },
   {
@@ -21,7 +25,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def find_project_root(marker=\"pyproject.toml\"):\n",
+    "    p = Path().resolve()\n",
+    "    for parent in [p, *p.parents]:\n",
+    "        if (parent / marker).exists():\n",
+    "            return parent\n",
+    "    raise RuntimeError(\"Could not find project root\")\n",
+    "\n",
+    "PROJECT_ROOT = find_project_root()\n",
+    "sys.path.append(str(PROJECT_ROOT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,9 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "run_id: adb88ec820804697a6339e28c0f8c9e0; lifecycle_stage: deleted\n"
+     ]
+    }
+   ],
    "source": [
     "# starting new run\n",
     "with mlflow.start_run() as run:\n",
@@ -64,9 +96,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before deleting run\n",
+      "run_id: 99143a72500a4c7bae270e5535e243a6; lifecycle_stage: active\n",
+      "After deleting run\n",
+      "run_id: 99143a72500a4c7bae270e5535e243a6; lifecycle_stage: deleted\n"
+     ]
+    }
+   ],
    "source": [
     "client = mlflow.MlflowClient()\n",
     "\n",
@@ -105,9 +148,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "run_id: ac9ed5e136784ab7824596dbb7bbf73e; lifecycle_stage: active\n",
+      "run_id: ac9ed5e136784ab7824596dbb7bbf73e; lifecycle_stage: deleted\n",
+      "run_id: ac9ed5e136784ab7824596dbb7bbf73e; lifecycle_stage: active\n"
+     ]
+    }
+   ],
    "source": [
     "client = mlflow.MlflowClient()\n",
     "\n",
@@ -153,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
