--- a/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/1_2_experiments_retrieve_experiments.ipynb
+++ b/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/1_2_experiments_retrieve_experiments.ipynb
@@ -21,7 +21,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def find_project_root(marker=\"pyproject.toml\"):\n",
+    "    p = Path().resolve()\n",
+    "    for parent in [p, *p.parents]:\n",
+    "        if (parent / marker).exists():\n",
+    "            return parent\n",
+    "    raise RuntimeError(\"Could not find project root\")\n",
+    "\n",
+    "PROJECT_ROOT = find_project_root()\n",
+    "sys.path.append(str(PROJECT_ROOT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,9 +54,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment does not exist\n"
+     ]
+    }
+   ],
    "source": [
     "experiment = mlflow.get_experiment_by_name(name=\"experiment-does-not-exist\")\n",
     "if experiment is None:\n",
@@ -45,9 +73,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "creating-experiments\n",
+      "262686110326234862\n"
+     ]
+    }
+   ],
    "source": [
     "experiment = mlflow.get_experiment_by_name(name=\"creating-experiments\")\n",
     "print(experiment.name)\n",
@@ -56,9 +93,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "experiment_id: \"262686110326234862\"\n",
+       "name: \"creating-experiments\"\n",
+       "artifact_location: \"file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/262686110326234862\"\n",
+       "lifecycle_stage: \"active\"\n",
+       "last_update_time: 1764688488852\n",
+       "creation_time: 1764688488852\n",
+       "tags {\n",
+       "  key: \"topic\"\n",
+       "  value: \"experiment-management\"\n",
+       "}\n",
+       "tags {\n",
+       "  key: \"version\"\n",
+       "  value: \"v1\"\n",
+       "}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "experiment.to_proto()"
    ]
@@ -77,9 +138,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "creating-experiments\n",
+      "262686110326234862\n"
+     ]
+    }
+   ],
    "source": [
     "experiment = mlflow.get_experiment(experiment_id=experiment.experiment_id)\n",
     "print(experiment.name)\n",
@@ -88,9 +158,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Could not find experiment with ID 2626861103262348622\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    experiment = mlflow.get_experiment(experiment_id=experiment.experiment_id + \"2\")\n",
@@ -115,9 +193,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "creating-experiments\n",
+      "262686110326234862\n"
+     ]
+    }
+   ],
    "source": [
     "experiment = mlflow.set_experiment(experiment_name=\"creating-experiments\")\n",
     "print(experiment.name)\n",
@@ -126,21 +213,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "creating-experiments\n",
+      "262686110326234862\n"
+     ]
+    }
+   ],
    "source": [
     "experiment = mlflow.set_experiment(experiment_id=experiment.experiment_id)\n",
     "print(experiment.name)\n",
     "print(experiment.experiment_id)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -159,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
