--- a/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/1_3_experiments_update_experiments.ipynb
+++ b/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/1_3_experiments_update_experiments.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Updating Experiments"
+    "# Updating Experiments\n",
+    "\n",
+    "On the current experiment only! No way how to specify tag on historical experiments.\n",
+    "\n",
+    "Current one is the one you have set up."
    ]
   },
   {
@@ -21,7 +25,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def find_project_root(marker=\"pyproject.toml\"):\n",
+    "    p = Path().resolve()\n",
+    "    for parent in [p, *p.parents]:\n",
+    "        if (parent / marker).exists():\n",
+    "            return parent\n",
+    "    raise RuntimeError(\"Could not find project root\")\n",
+    "\n",
+    "PROJECT_ROOT = find_project_root()\n",
+    "sys.path.append(str(PROJECT_ROOT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,9 +58,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "experiment_id: \"262686110326234862\"\n",
+      "name: \"creating-experiments\"\n",
+      "artifact_location: \"file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/262686110326234862\"\n",
+      "lifecycle_stage: \"active\"\n",
+      "last_update_time: 1764688488852\n",
+      "creation_time: 1764688488852\n",
+      "tags {\n",
+      "  key: \"topic\"\n",
+      "  value: \"experiment-management\"\n",
+      "}\n",
+      "tags {\n",
+      "  key: \"version\"\n",
+      "  value: \"v1\"\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "experiment = mlflow.set_experiment(experiment_name=\"creating-experiments\")\n",
@@ -45,9 +91,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "experiment_id: \"262686110326234862\"\n",
+      "name: \"creating-experiments\"\n",
+      "artifact_location: \"file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/262686110326234862\"\n",
+      "lifecycle_stage: \"active\"\n",
+      "last_update_time: 1764688488852\n",
+      "creation_time: 1764688488852\n",
+      "tags {\n",
+      "  key: \"new-tag\"\n",
+      "  value: \"new-tag-value\"\n",
+      "}\n",
+      "tags {\n",
+      "  key: \"topic\"\n",
+      "  value: \"experiment-management\"\n",
+      "}\n",
+      "tags {\n",
+      "  key: \"version\"\n",
+      "  value: \"v1\"\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# create a new tag\n",
     "mlflow.set_experiment_tag(key=\"new-tag\", value=\"new-tag-value\")\n",
@@ -59,11 +131,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "experiment_id: \"262686110326234862\"\n",
+      "name: \"creating-experiments\"\n",
+      "artifact_location: \"file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/262686110326234862\"\n",
+      "lifecycle_stage: \"active\"\n",
+      "last_update_time: 1764688488852\n",
+      "creation_time: 1764688488852\n",
+      "tags {\n",
+      "  key: \"new-tag\"\n",
+      "  value: \"new-tag-value-updated\"\n",
+      "}\n",
+      "tags {\n",
+      "  key: \"topic\"\n",
+      "  value: \"experiment-management\"\n",
+      "}\n",
+      "tags {\n",
+      "  key: \"version\"\n",
+      "  value: \"v1\"\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# update an existing tag\n",
+    "# update an existing tag with a new value\n",
     "mlflow.set_experiment_tag(key=\"new-tag\", value=\"new-tag-value-updated\")\n",
     "\n",
     "# retrieve the experiment\n",
@@ -85,10 +183,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "experiment_id: \"262686110326234862\"\n",
+      "name: \"creating-experiments\"\n",
+      "artifact_location: \"file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/262686110326234862\"\n",
+      "lifecycle_stage: \"active\"\n",
+      "last_update_time: 1764688488852\n",
+      "creation_time: 1764688488852\n",
+      "tags {\n",
+      "  key: \"new-tag\"\n",
+      "  value: \"new-tag-value-updated-again\"\n",
+      "}\n",
+      "tags {\n",
+      "  key: \"topic\"\n",
+      "  value: \"experiment-management\"\n",
+      "}\n",
+      "tags {\n",
+      "  key: \"version\"\n",
+      "  value: \"v2\"\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
+    "# set more than one tag at a time. Works only on active experiment.\n",
     "mlflow.set_experiment_tags(tags={\"new-tag\": \"new-tag-value-updated-again\", \"version\":\"v2\"})\n",
     "\n",
     "# retrieve the experiment\n",
@@ -100,7 +225,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Updating tags using the client"
+    "# Updating tags using the client\n",
+    "For this one you don't need to have active experiment. You refer to it using experiment_id"
    ]
   },
   {
@@ -117,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,9 +252,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "experiment_id: \"262686110326234862\"\n",
+      "name: \"creating-experiments\"\n",
+      "artifact_location: \"file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/262686110326234862\"\n",
+      "lifecycle_stage: \"active\"\n",
+      "last_update_time: 1764688488852\n",
+      "creation_time: 1764688488852\n",
+      "tags {\n",
+      "  key: \"new-tag\"\n",
+      "  value: \"new-tag-value-updated-with client\"\n",
+      "}\n",
+      "tags {\n",
+      "  key: \"topic\"\n",
+      "  value: \"experiment-management\"\n",
+      "}\n",
+      "tags {\n",
+      "  key: \"version\"\n",
+      "  value: \"v2\"\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "client.set_experiment_tag(experiment_id=experiment.experiment_id, key=\"new-tag\", value=\"new-tag-value-updated-with client\")\n",
     "\n",
@@ -143,12 +295,14 @@
    "source": [
     "# Providing experiment description\n",
     "\n",
-    "To provide an experiment description is necessary to use a particular tag. `mlflow.note.content`"
+    "To provide an experiment description is necessary to use a particular tag. `mlflow.note.content`\n",
+    "\n",
+    "This is a special tag. You can add description either manually via UI, or via this tag."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,9 +312,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "experiment_id: \"262686110326234862\"\n",
+      "name: \"creating-experiments\"\n",
+      "artifact_location: \"file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/262686110326234862\"\n",
+      "lifecycle_stage: \"active\"\n",
+      "last_update_time: 1764688488852\n",
+      "creation_time: 1764688488852\n",
+      "tags {\n",
+      "  key: \"mlflow.note.content\"\n",
+      "  value: \"This is the description for the experiment\"\n",
+      "}\n",
+      "tags {\n",
+      "  key: \"new-tag\"\n",
+      "  value: \"new-tag-value-updated-with client\"\n",
+      "}\n",
+      "tags {\n",
+      "  key: \"topic\"\n",
+      "  value: \"experiment-management\"\n",
+      "}\n",
+      "tags {\n",
+      "  key: \"version\"\n",
+      "  value: \"v2\"\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# retrieve the experiment\n",
     "experiment = mlflow.set_experiment(experiment_name=\"creating-experiments\")\n",
@@ -188,12 +372,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "experiment_id: \"262686110326234862\"\n",
+      "name: \"renamed-experiment\"\n",
+      "artifact_location: \"file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/262686110326234862\"\n",
+      "lifecycle_stage: \"active\"\n",
+      "last_update_time: 1764696988786\n",
+      "creation_time: 1764688488852\n",
+      "tags {\n",
+      "  key: \"mlflow.note.content\"\n",
+      "  value: \"This is the description for the experiment\"\n",
+      "}\n",
+      "tags {\n",
+      "  key: \"new-tag\"\n",
+      "  value: \"new-tag-value-updated-with client\"\n",
+      "}\n",
+      "tags {\n",
+      "  key: \"topic\"\n",
+      "  value: \"experiment-management\"\n",
+      "}\n",
+      "tags {\n",
+      "  key: \"version\"\n",
+      "  value: \"v2\"\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "client = mlflow.MlflowClient()\n",
-    "\n",
+    "# everything else being equal, rename the experiment\n",
     "client.rename_experiment(experiment_id=experiment.experiment_id, new_name=\"renamed-experiment\")\n",
     "\n",
     "# retrieve the experiment\n",
@@ -225,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
