--- a/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/1_4_experiments_delete_experiments.ipynb
+++ b/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/1_4_experiments_delete_experiments.ipynb
@@ -20,8 +20,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To delete experiment permanently, you need to delete it from the folder manually (or from Unity Catalog)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def find_project_root(marker=\"pyproject.toml\"):\n",
+    "    p = Path().resolve()\n",
+    "    for parent in [p, *p.parents]:\n",
+    "        if (parent / marker).exists():\n",
+    "            return parent\n",
+    "    raise RuntimeError(\"Could not find project root\")\n",
+    "\n",
+    "PROJECT_ROOT = find_project_root()\n",
+    "sys.path.append(str(PROJECT_ROOT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,9 +61,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "renamed-experiment\n",
+      "262686110326234862\n",
+      "active\n"
+     ]
+    }
+   ],
    "source": [
     "client = mlflow.MlflowClient()\n",
     "\n",
@@ -52,7 +89,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# delete experiment\n",
+    "# delete experiment (not hard-code delete, just move to deleted state - .trash folder)\n",
+    "# can be restored later if needed\n",
     "client.delete_experiment(experiment_id = experiment.experiment_id)"
    ]
   },
@@ -60,9 +98,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deleted\n"
+     ]
+    }
+   ],
    "source": [
-    "# retrieve experiment\n",
+    "# retrieve deleted experiment - still possible. Lifecycle stage will be \"deleted\"\n",
     "experiment = client.get_experiment_by_name(\"renamed-experiment\")\n",
     "print(experiment.lifecycle_stage)"
    ]
@@ -88,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,21 +145,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "active\n"
+     ]
+    }
+   ],
    "source": [
     "experiment = client.get_experiment_by_name(\"renamed-experiment\")\n",
     "\n",
     "print(experiment.lifecycle_stage)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -132,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
