--- a/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/2_1_runs_create_run.ipynb
+++ b/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/2_1_runs_create_run.ipynb
@@ -21,7 +21,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def find_project_root(marker=\"pyproject.toml\"):\n",
+    "    p = Path().resolve()\n",
+    "    for parent in [p, *p.parents]:\n",
+    "        if (parent / marker).exists():\n",
+    "            return parent\n",
+    "    raise RuntimeError(\"Could not find project root\")\n",
+    "\n",
+    "PROJECT_ROOT = find_project_root()\n",
+    "sys.path.append(str(PROJECT_ROOT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,34 +64,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ActiveRun\n"
+     ]
+    }
+   ],
    "source": [
     "print(type(run).__name__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "run_uuid: \"078956f3d3a04197a22adc33277909eb\"\n",
+       "experiment_id: \"0\"\n",
+       "run_name: \"nebulous-frog-683\"\n",
+       "user_id: \"dragu\"\n",
+       "status: RUNNING\n",
+       "start_time: 1764749304112\n",
+       "artifact_uri: \"file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/0/078956f3d3a04197a22adc33277909eb/artifacts\"\n",
+       "lifecycle_stage: \"active\"\n",
+       "run_id: \"078956f3d3a04197a22adc33277909eb\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "run.info.to_proto()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'metrics': {},\n",
+       " 'params': {},\n",
+       " 'tags': {'mlflow.runName': 'nebulous-frog-683',\n",
+       "  'mlflow.source.name': 'c:\\\\Users\\\\dragu\\\\Documents\\\\GIT\\\\mlflow_for_ml_dev_tutorial\\\\.venv\\\\Lib\\\\site-packages\\\\ipykernel_launcher.py',\n",
+       "  'mlflow.source.type': 'LOCAL',\n",
+       "  'mlflow.user': 'dragu'}}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "run.data.to_dictionary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,6 +142,9 @@
     "\n",
     "# Machine learing code here\n",
     "# ...\n",
+    "\n",
+    "# Log_artifacts, parameters, metrics, etc. can detect active runs automatically\n",
+    "# and they log to that active run.\n",
     "\n",
     "# logging some random parameters\n",
     "mlflow.log_param(\"param1\", 5)\n",
@@ -93,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,27 +169,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "run_uuid: \"078956f3d3a04197a22adc33277909eb\"\n",
+       "experiment_id: \"0\"\n",
+       "run_name: \"nebulous-frog-683\"\n",
+       "user_id: \"dragu\"\n",
+       "status: RUNNING\n",
+       "start_time: 1764749304112\n",
+       "artifact_uri: \"file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/0/078956f3d3a04197a22adc33277909eb/artifacts\"\n",
+       "lifecycle_stage: \"active\"\n",
+       "run_id: \"078956f3d3a04197a22adc33277909eb\""
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "run.info.to_proto()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'metrics': {'metric1': 15.0, 'metric2': 52.0, 'metric3': 35.0},\n",
+       " 'params': {'param1': '5', 'param2': '5', 'param3': '5'},\n",
+       " 'tags': {'mlflow.runName': 'nebulous-frog-683',\n",
+       "  'mlflow.source.name': 'c:\\\\Users\\\\dragu\\\\Documents\\\\GIT\\\\mlflow_for_ml_dev_tutorial\\\\.venv\\\\Lib\\\\site-packages\\\\ipykernel_launcher.py',\n",
+       "  'mlflow.source.type': 'LOCAL',\n",
+       "  'mlflow.user': 'dragu'}}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "run.data.to_dictionary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Run with UUID 078956f3d3a04197a22adc33277909eb is already active. To start a new run, first end the current run with mlflow.end_run(). To start a nested run, call start_run with nested=True\n"
+     ]
+    }
+   ],
    "source": [
     "#starting a new run without ending the previous one will throw an error\n",
     "try:\n",
@@ -146,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,9 +265,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "active\n"
+     ]
+    }
+   ],
    "source": [
     "#starting a new run\n",
     "run2 = mlflow.start_run()\n",
@@ -167,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,14 +295,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using run object as context manager"
+    "# Using run object as context manager (with ... as)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run starts and ends inside the context manager. You don't need to bother about mlflow.end_run(), it happens automatically."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WITHIN RUN CONTEXT\n",
+      "Run Status:  RUNNING\n",
+      "OUTSIDE RUN CONTEXT\n",
+      "Run Status:  FINISHED\n",
+      "{'metrics': {'metric1': 15.0, 'metric2': 52.0, 'metric3': 35.0}, 'params': {'param1': '5', 'param2': '5', 'param3': '5'}, 'tags': {'mlflow.runName': 'resilient-fawn-374', 'mlflow.source.name': 'c:\\\\Users\\\\dragu\\\\Documents\\\\GIT\\\\mlflow_for_ml_dev_tutorial\\\\.venv\\\\Lib\\\\site-packages\\\\ipykernel_launcher.py', 'mlflow.source.type': 'LOCAL', 'mlflow.user': 'dragu'}}\n"
+     ]
+    }
+   ],
    "source": [
     "with mlflow.start_run() as run: \n",
     "    print(\"WITHIN RUN CONTEXT\")\n",
@@ -233,21 +369,50 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Run\n"
+     ]
+    }
+   ],
    "source": [
     "client = mlflow.MlflowClient()\n",
     "\n",
-    "# create a run in the default experiment\n",
+    "# create a run in the default experiment -> experiment MUST be specified\n",
     "run = client.create_run(experiment_id=\"0\") \n",
     "\n",
+    "# we have created a new run, but it's not active in the system yet.\n",
+    "# logging parameters and metrics will not work unless we set this run as active\n",
     "print(type(run).__name__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "run_uuid: \"32069eb599f241ff820c2463ab3d13c3\"\n",
+       "experiment_id: \"0\"\n",
+       "run_name: \"thundering-wolf-818\"\n",
+       "user_id: \"unknown\"\n",
+       "status: RUNNING\n",
+       "start_time: 1764751739913\n",
+       "artifact_uri: \"file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/0/32069eb599f241ff820c2463ab3d13c3/artifacts\"\n",
+       "lifecycle_stage: \"active\"\n",
+       "run_id: \"32069eb599f241ff820c2463ab3d13c3\""
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "run.info.to_proto()"
    ]
@@ -258,6 +423,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# we created a run previously, but it's not active\n",
+    "# so, this logging command will create a new run instead of logging to the existing one\n",
     "mlflow.log_metric(\"random-metric\", 10)"
    ]
   },
@@ -267,16 +434,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# here we finished the run created by mlflow.log_metric\n",
+    "# but, the run we created with client.create_run is still active in the system\n",
     "mlflow.end_run()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "log_param() got an unexpected keyword argument 'run_id'\n"
+     ]
+    }
+   ],
    "source": [
     "# Associating metrics and parameters with the run\n",
+    "# we are passing the id we have created using the client\n",
     "mlflow.log_metric(key=\"m1\", value=1.5, run_id=run.info.run_id)\n",
     "\n",
     "# log_param does not accept run_id as parameter\n",
@@ -290,7 +468,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ending a  with the client"
+    "## Ending a run created  with the client"
    ]
   },
   {
@@ -307,12 +485,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FINISHED\n"
+     ]
+    }
+   ],
    "source": [
     "client = mlflow.MlflowClient()\n",
     "\n",
+    "# you need to specify the id of the run you want to terminate\n",
     "client.set_terminated(run_id = run.info.run_id)\n",
     "\n",
     "# retrieve the run object to verify that the run is terminated\n",
@@ -324,22 +511,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using run as context manager."
+    "## Using run created with client as context manager.\n",
+    "- Create a run object\n",
+    "- Use id of this run object and run `with mlflow.start_run(...) as run`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Run\n",
+      "WITHIN RUN CONTEXT\n",
+      "ActiveRun\n",
+      "Run Name:  stately-trout-548\n",
+      "Run Status:  RUNNING\n",
+      "OUTSIDE CONTEXT\n",
+      "Run Name:  stately-trout-548\n",
+      "Run Status:  FINISHED\n",
+      "Run Data\n",
+      "{'metrics': {'m1': 2.0}, 'params': {'p1': '1'}, 'tags': {'mlflow.runName': 'stately-trout-548'}}\n"
+     ]
+    }
+   ],
    "source": [
     "run = client.create_run(experiment_id=\"0\")\n",
-    "print(type(run).__name__)\n",
+    "print(type(run).__name__) # Run\n",
     "with mlflow.start_run(run_id=run.info.run_id) as run:\n",
-    "    print(type(run).__name__)\n",
     "    print(\"WITHIN RUN CONTEXT\")\n",
+    "    print(type(run).__name__) # Now, it's already ActiveRun\n",
     "    print(\"Run Name: \", run.info.run_name)\n",
     "    print(\"Run Status: \",run.info.status)\n",
+    "    # we have an active run under context manager\n",
+    "    # now, logging will work as expected as it can detect the active run\n",
     "    mlflow.log_param(\"p1\", 1)\n",
     "    mlflow.log_metric(\"m1\", 2)\n",
     "\n",
@@ -352,13 +560,6 @@
     "print(run.data.to_dictionary())\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -377,7 +578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
