--- a/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/2_4_runs_nested_runs.ipynb
+++ b/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/2_4_runs_nested_runs.ipynb
@@ -9,7 +9,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def find_project_root(marker=\"pyproject.toml\"):\n",
+    "    p = Path().resolve()\n",
+    "    for parent in [p, *p.parents]:\n",
+    "        if (parent / marker).exists():\n",
+    "            return parent\n",
+    "    raise RuntimeError(\"Could not find project root\")\n",
+    "\n",
+    "PROJECT_ROOT = find_project_root()\n",
+    "sys.path.append(str(PROJECT_ROOT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,9 +71,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parent run_id: 09c548136e074f6694d6c61f7b66cf4d\n",
+      "Child run_id: 7f5e61624c7b4ff7ad66b0b73a24abed\n",
+      "Grandchild run_id: 9ab176c99ad149d1baa01df11ad65d94\n"
+     ]
+    }
+   ],
    "source": [
     "# Now, it is possible to create a nested structure of runs using parent_run_id parameter.\n",
     "with mlflow.start_run(run_name=\"parent\") as parent_run:\n",
@@ -95,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
